Fixed spacing on ios

--- a/scss/4-pages/_caseStudy.scss
+++ b/scss/4-pages/_caseStudy.scss
@@ -109,7 +109,7 @@
 
         .social-cta {
             justify-content: center;
-            gap: 2rem;
+            margin-right: 1rem;
         }
     }
 
